--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/icons/netflix.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <link rel="stylesheet" href="./src/index.css" />
     <title>Netflix</title>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
   </head>
   <body>
     <div id="root"></div>
