--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
