--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/images/icons/netflix.png" />
+  <link rel="icon" type="image/svg+xml" href="/images/icons/movlix.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Netflix</title>
+  <title>Movlix</title>
   <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
 </head>
 
